--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,9 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
+fastapi==0.115.0
+uvicorn[standard]==0.32.1
 python-dotenv==1.0.0
-firebase-admin==6.3.0
-google-generativeai==0.3.1
-pydantic==2.5.0
-python-multipart==0.0.6
-pydantic-settings==2.1.0
+firebase-admin==6.5.0
+google-generativeai==0.8.3
+pydantic==2.10.3
+python-multipart==0.0.20
+pydantic-settings==2.7.0
+requests==2.32.3
