--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,8 @@ python-dotenv==1.0.0
 firebase-admin==6.5.0
 google-generativeai==0.8.3
 pydantic==2.10.3
+pydantic[email]==2.10.3
 python-multipart==0.0.20
 pydantic-settings==2.7.0
 requests==2.32.3
+email-validator==2.2.0
